# udemy

AI-ML course udemy/Machine Learning A-Z (Codes and Datasets)/Part 1 - Data Preprocessing/Section 2 -------------------- Part 1 - Data Preprocessing --------------------/R/: .Rhistory
AI-ML course udemy/Machine Learning A-Z (Codes and Datasets)/Part 2 - Regression/Section 4 - Simple Linear Regression/Python/: simple_linear_regression copy.ipynb  simple_linear_regression.ipynb
AI-ML course udemy/Machine Learning A-Z (Codes and Datasets)/Part 2 - Regression/Section 4 - Simple Linear Regression/R/: .Rhistory
AI-ML course udemy/Machine Learning A-Z (Codes and Datasets)/Part 2 - Regression/Section 5 - Multiple Linear Regression/Python/: multiple_linear_regression copy.ipynb
AI-ML course udemy/Machine Learning A-Z (Codes and Datasets)/Part 3 - Classification/Section 15 - K-Nearest Neighbors (K-NN)/Python/: k_nearest_neighbors.ipynb
DeepLearningAZ/: .gitignore  pyproject.toml
DeepLearningAZ/Part 1 - Artificial Neural Networks/: ann.ipynb
DeepLearningAZ/Part 3 - Recurrent Neural Networks/: rnn.ipynb
DeepLearningAZ/Part 4 - Self Organizing Maps/: mega_case_study.ipynb  som.ipynb
DeepLearningAZ/Part 5 - Boltzmann Machines/: rbm.ipynb
DeepLearningAZ/Part 6 - AutoEncoders/: sae.ipynb
DeepLearningAZ/mine/: ann.ipynb  cnn.ipynb  cnn.py  mega_case_study.ipynb  rbm.ipynb  rnn.ipynb  rnn.py  sae.ipynb  som.ipynb
WebDev Bootcamp/04_CSS_Intro_CODE/04_CSS_Intro/text_properties/: app.css
WebDev Bootcamp/Intro_To_HTML/: about.html
(+2 files in other folders)
